<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="@string/cate">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:title="@string/home"/>
            <item
                android:id="@+id/nav_business"
                android:title="@string/business"/>
            <item
                android:id="@+id/nav_sport"
                android:title="@string/sport"/>
            <item
                android:id="@+id/nav_tech"
                android:title="@string/tech"/>
        </menu>
    </item>

    <item android:title="@string/custom">
        <menu>
            <item
                android:id="@+id/nav_saved"
                android:icon="@drawable/ic_menu_save"
                android:title="@string/saved" />
            <!--TODO 5: Tạo link đến phần bài đăng-->
            <item
                android:id="@+id/nav_story"
                android:icon="@drawable/ic_menu_story"
                android:title="@string/your_story" />
            <item
                android:id="@+id/menu_refresh"
                app:showAsAction="never"
                android:title="@string/menu_refresh"
                android:icon="@drawable/ic_menu_refresh"/>
        </menu>
    </item>
</menu>
